fixes for some warnings, from peb
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@64 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* tex4ht-c.tex,
+	* tex4ht-t4ht.tex: some warning fixes.
+
 2010-11-17  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-c.tex: compiler options are a comment, despite #define's.
